--- a/KeepKaizen/KeepKaizen/Base.lproj/Main.storyboard
+++ b/KeepKaizen/KeepKaizen/Base.lproj/Main.storyboard
@@ -297,9 +297,13 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cRN-0i-NPm">
+                                                    <gestureRecognizers/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="19"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
+                                                    <connections>
+                                                        <outletCollection property="gestureRecognizers" destination="4Kp-oE-oNH" appends="YES" id="Dh6-Jl-65i"/>
+                                                    </connections>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="u1T-4D-eQd">
                                                     <constraints>
@@ -319,11 +323,14 @@
                                                 <constraint firstItem="cRN-0i-NPm" firstAttribute="top" secondItem="FJp-HB-wJh" secondAttribute="topMargin" constant="11" id="umM-8K-aWJ"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <gestureRecognizers/>
                                         <connections>
                                             <outlet property="deltaLabel" destination="cRN-0i-NPm" id="P3V-l7-4On"/>
                                             <outlet property="freqLabel" destination="Dyb-Ie-z74" id="tNm-5S-agY"/>
                                             <outlet property="goalIcon" destination="u1T-4D-eQd" id="Lfj-hO-j7e"/>
+                                            <outlet property="goalView" destination="FJp-HB-wJh" id="5SW-kU-QMG"/>
                                             <outlet property="goalsLabel" destination="2LF-ig-WnA" id="yTW-Vg-oNp"/>
+                                            <outletCollection property="gestureRecognizers" destination="9So-bw-PQ9" appends="YES" id="XsH-or-Qf9"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -356,6 +363,8 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="4Kp-oE-oNH"/>
+                <tapGestureRecognizer id="9So-bw-PQ9"/>
             </objects>
             <point key="canvasLocation" x="-1245.5999999999999" y="282.00899550224892"/>
         </scene>
