--- a/KeepKaizen/KeepKaizen/Base.lproj/Main.storyboard
+++ b/KeepKaizen/KeepKaizen/Base.lproj/Main.storyboard
@@ -786,6 +786,12 @@
                                 <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="50"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done"/>
                             </textField>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ydM-h0-f0I">
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="rft-fh-aJs"/>
+                                </constraints>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sLH-Ta-zMg">
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -804,28 +810,33 @@
                                     <constraint firstAttribute="height" constant="1" id="aor-nZ-ZT3"/>
                                 </constraints>
                             </view>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="41" translatesAutoresizingMaskIntoConstraints="NO" id="6zh-SK-XxH">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="39" translatesAutoresizingMaskIntoConstraints="NO" id="6zh-SK-XxH">
                                 <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Baseline" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wKT-o9-cXD">
+                                        <constraints>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="18" id="hxL-Cl-vEg"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Goal" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wNA-qz-iyx">
                                         <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Frequency" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ygj-xc-LB5">
-                                        <frame key="frameInset" minY="64" width="82" height="24"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Frequency" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ygj-xc-LB5">
                                         <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d0F-PH-yC7">
-                                        <frame key="frameInset" minY="129" width="73" height="24"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d0F-PH-yC7">
                                         <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="152" id="8VJ-JM-ges"/>
                                     <constraint firstAttribute="width" constant="82" id="Xrj-ZW-W5Y"/>
                                 </constraints>
                             </stackView>
@@ -874,6 +885,19 @@
                                     <action selector="categoryButtonPressed:" destination="CZc-5H-H67" eventType="touchUpInside" id="2fK-wL-gol"/>
                                 </connections>
                             </button>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="daily by" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k8H-6x-cOx">
+                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="17"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5A4-MB-vSD" userLabel="Baseline Text">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="269" id="5vi-lg-tTl"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" keyboardType="numberPad" returnKeyType="done"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -886,20 +910,27 @@
                             <constraint firstItem="0iK-xV-v2j" firstAttribute="leading" secondItem="rYW-QS-wOu" secondAttribute="leading" id="F0a-4h-Wps"/>
                             <constraint firstItem="sLH-Ta-zMg" firstAttribute="leading" secondItem="rYW-QS-wOu" secondAttribute="leading" id="FX5-fj-TSd"/>
                             <constraint firstItem="pbS-Qm-gEa" firstAttribute="centerX" secondItem="rYW-QS-wOu" secondAttribute="centerX" id="FZq-v2-hDU"/>
+                            <constraint firstItem="k8H-6x-cOx" firstAttribute="top" secondItem="qff-bn-ND5" secondAttribute="bottom" constant="13" id="Iom-ep-fbL"/>
                             <constraint firstItem="sLH-Ta-zMg" firstAttribute="centerX" secondItem="rYW-QS-wOu" secondAttribute="centerX" id="JJT-lT-8Ar"/>
+                            <constraint firstAttribute="trailing" secondItem="ydM-h0-f0I" secondAttribute="trailing" id="LVB-g8-KKO"/>
                             <constraint firstItem="MKA-HH-4pE" firstAttribute="centerX" secondItem="rYW-QS-wOu" secondAttribute="centerX" id="QlV-sP-AOF"/>
                             <constraint firstAttribute="trailing" secondItem="Uk1-NX-gwL" secondAttribute="trailing" constant="13" id="Sun-rY-M5S"/>
-                            <constraint firstItem="6zh-SK-XxH" firstAttribute="leading" secondItem="rYW-QS-wOu" secondAttribute="leadingMargin" id="Ttu-1x-gg1"/>
                             <constraint firstItem="0z1-0G-ajX" firstAttribute="trailing" secondItem="rYW-QS-wOu" secondAttribute="trailingMargin" id="X25-6M-ISZ"/>
-                            <constraint firstItem="6zh-SK-XxH" firstAttribute="top" secondItem="qcJ-hU-Sfo" secondAttribute="bottom" constant="108" id="cSi-5C-tRb"/>
+                            <constraint firstItem="5A4-MB-vSD" firstAttribute="top" secondItem="qcJ-hU-Sfo" secondAttribute="bottom" constant="49" id="bZ1-Gg-1aA"/>
+                            <constraint firstItem="6zh-SK-XxH" firstAttribute="leading" secondItem="rYW-QS-wOu" secondAttribute="leadingMargin" id="d6q-ah-SO3"/>
                             <constraint firstItem="6IH-js-iuh" firstAttribute="top" secondItem="rYW-QS-wOu" secondAttribute="top" id="eXE-sB-e94"/>
                             <constraint firstItem="0iK-xV-v2j" firstAttribute="centerX" secondItem="rYW-QS-wOu" secondAttribute="centerX" id="ei3-3f-92u"/>
+                            <constraint firstItem="5A4-MB-vSD" firstAttribute="trailing" secondItem="rYW-QS-wOu" secondAttribute="trailingMargin" id="fBl-aM-Gpe"/>
+                            <constraint firstItem="6zh-SK-XxH" firstAttribute="top" secondItem="qcJ-hU-Sfo" secondAttribute="bottom" constant="49" id="gPO-Fi-i6D"/>
                             <constraint firstItem="Of7-Nl-dJC" firstAttribute="top" secondItem="MKA-HH-4pE" secondAttribute="bottom" constant="8" id="jXA-tk-ZSa"/>
+                            <constraint firstItem="ydM-h0-f0I" firstAttribute="top" secondItem="qcJ-hU-Sfo" secondAttribute="bottom" constant="89" id="krf-gL-x4V"/>
                             <constraint firstItem="pbS-Qm-gEa" firstAttribute="leading" secondItem="rYW-QS-wOu" secondAttribute="leading" id="plm-DV-aLJ"/>
                             <constraint firstItem="qff-bn-ND5" firstAttribute="centerX" secondItem="rYW-QS-wOu" secondAttribute="centerX" id="qVy-9I-PpZ"/>
                             <constraint firstItem="qcJ-hU-Sfo" firstAttribute="centerX" secondItem="rYW-QS-wOu" secondAttribute="centerX" id="r95-pw-Syn"/>
                             <constraint firstAttribute="trailing" secondItem="6IH-js-iuh" secondAttribute="trailing" id="tnE-VK-3YV"/>
+                            <constraint firstItem="k8H-6x-cOx" firstAttribute="centerX" secondItem="rYW-QS-wOu" secondAttribute="centerX" id="udW-x2-OSn"/>
                             <constraint firstItem="qcJ-hU-Sfo" firstAttribute="top" secondItem="qff-bn-ND5" secondAttribute="bottom" constant="45" id="unw-wg-BCP"/>
+                            <constraint firstItem="ydM-h0-f0I" firstAttribute="leading" secondItem="rYW-QS-wOu" secondAttribute="leading" id="v2O-my-6Ue"/>
                             <constraint firstItem="NBa-nT-Ntk" firstAttribute="top" secondItem="0iK-xV-v2j" secondAttribute="bottom" constant="14" id="vkd-QQ-dr9"/>
                             <constraint firstItem="sLH-Ta-zMg" firstAttribute="top" secondItem="0z1-0G-ajX" secondAttribute="bottom" constant="17" id="wot-Cq-h3H"/>
                             <constraint firstItem="0iK-xV-v2j" firstAttribute="top" secondItem="Uk1-NX-gwL" secondAttribute="bottom" constant="14" id="x7U-ml-bY5"/>
@@ -910,10 +941,12 @@
                     </view>
                     <connections>
                         <outlet property="addButton" destination="MKA-HH-4pE" id="5HC-iE-rqx"/>
+                        <outlet property="baseline" destination="5A4-MB-vSD" id="Bfp-ke-4NE"/>
                         <outlet property="categoryButton" destination="NBa-nT-Ntk" id="2wL-me-OiV"/>
                         <outlet property="categoryPicker" destination="Gg2-Ae-fet" id="zib-0O-c9q"/>
                         <outlet property="deltaLabel" destination="qcJ-hU-Sfo" id="ZvL-eg-HOU"/>
                         <outlet property="deltaSign" destination="qff-bn-ND5" id="h9a-sr-08g"/>
+                        <outlet property="freqLabel" destination="k8H-6x-cOx" id="pxk-ky-jcD"/>
                         <outlet property="frequencyButton" destination="Uk1-NX-gwL" id="Vn5-nX-8dm"/>
                         <outlet property="frequencyPicker" destination="QI4-nC-Sf0" id="PS0-V5-fOf"/>
                         <outlet property="goalText" destination="0z1-0G-ajX" id="Cky-E3-84J"/>
@@ -922,7 +955,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XFK-e9-QcC" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="W3m-Nm-Nld" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-186" y="283"/>
+            <point key="canvasLocation" x="-186.40000000000001" y="282.90854572713647"/>
         </scene>
     </scenes>
     <resources>
